refactor(core): Replace Arrays.asList with List.of, use named threads, use Map.entry()
Replace Arrays.asList with List.of for fixed literal lists in cycle,
shortest path, partition, and GraphTests. Use named daemon platform
threads in ConcurrencyUtil. Replace AbstractMap.SimpleImmutableEntry
with Map.entry() in RandomRegularGraphGenerator.